assets/css/app.css
.project-link-delete, .collection_delete_button {
    cursor: pointer;
}

#project-edit-buttons {
    position: fixed;
    bottom: 36px;
    right: 0;
}

.page-image {
    border: black solid 1px;

    img {
        height: 100%;
        width: 100%;
    }
}

header {
    background-color: #f5f5f5;
    margin-bottom: 10px;
}

